Fix usernames align

--- a/web-app/src/tweet/tweet-card.css
+++ b/web-app/src/tweet/tweet-card.css
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    align-items: baseline;
 }
 
 .TweetCreated {
